--- a/examples/components/tmpl/index.tmpl
+++ b/examples/components/tmpl/index.tmpl
@@ -13,7 +13,7 @@
     <link href="dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="dist/css/highlight-in-textarea.css" rel="stylesheet">
    
-    <script src="dist/js/akumos.js"></script>
+    <script src="dist/js/akumos2.js"></script>
     
 
 
@@ -67,7 +67,7 @@
         <div class="container">
             <div class="row g-3">
                 <div class="col-sm-7">
-                    <script>app.show('index')</script>
+                    <script>{{init}}</script>
                 </div>
             </div>
         </div>
